Fix menu overflow

--- a/src/static/pycontw-2018/styles/_menu-desktop.scss
+++ b/src/static/pycontw-2018/styles/_menu-desktop.scss
@@ -26,7 +26,6 @@ $menu-desktop-height: 136px;
 
 		display: inline-block;
 		height: $menu-item-height;
-		overflow: hidden;
 
 		> li {
 			display: flex;
